# evm_wallet

./: README.MD  chains.py  pyproject.toml  requirements.txt  setup.py  w3error.py  w3transactor.py
data/: chains_info.json  coins_info.json
evm_wallet/: __init__.py  abi_loader.py  chains.py  coins.py  logger.py  w3transactor.py  w3utils.py  w3wallet.py
evm_wallet/data/: chains_info.json  coins_info.json
src/: __init__.py  abi_loader.py  coins.py  logger.py  w3wallet.py
