[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "evm-wallet"
version = "0.1.0"
dependencies = [
  "web3",
  "requests",
  "eth-account",
]
requires-python = ">=3.8"
authors = [
  {name = "GuessWho", email = "eu1qjqaw8dda@mail.ru"},
]
description = "Module to work with EVM web3 wallets"
readme = "README.MD"
license = {file = "LICENSE.txt"}
keywords = ["eth", "web3"]
classifiers = [
  "Programming Language :: Python"
]

#[project.optional-dependencies]
#gui = ["PyQt5"]
#cli = [
#  "rich",
#  "click",
#]

[project.urls]
Homepage = "https://github.com/GuessWho91/evm_wallet"
Documentation = "https://github.com/GuessWho91/evm_wallet"
Repository = "https://github.com/GuessWho91/evm_wallet"
"Bug Tracker" = "https://github.com/GuessWho91/evm_wallet"
Changelog = "https://github.com/GuessWho91/evm_wallet"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"